--- a/style.css
+++ b/style.css
@@ -6,3 +6,10 @@ body {
 #map { height: 50%;
     height:600px;
     box-shadow: 5px 5px 5px #888 }
+
+#norte{
+    position:fixed;
+    width:2.5%;
+    left: 3.5%;
+    padding: 1.2%;
+    }
