--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body {
 
 #map { height: 50%;
     height:600px;
-    box-shadow: 5px 5px 5px #888 }
+    box-shadow: 5px 5px 5px #4951e4 }
 
 #norte{
     position:fixed;
-    width:2.5%;
-    left: 3.5%;
+    width:3.5%;
+    left: 4.5%;
     padding: 1.2%;
     }
