--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,17 @@ html, body, #mapid {
     width: 100%;
   }
   
-  .estiloIconos {
-    color: brown;
+  .coordinates {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    background-color: rgb(62, 52, 52);
+    padding: 5px;
+  }
+  .legend {
+    background-color: #e9eacbca;
+    padding: 5px;
+    opacity: 0.8;
+    height: 150px;
+    width: 200px;
   }
